# qgis-to-illustrator-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
qgis_to_illustrator_tools/.github/workflows/: ci.yml
qgis_to_illustrator_tools/illustrator/: illustrator_relink_and_export.js
qgis_to_illustrator_tools/python/notebooks/: 00_cms_data_download.ipynb  00_cms_data_download_marineheatwaves.ipynb  01_create_latitude_blocks.ipynb  02_clip_ocean_by_latitude.ipynb  02_zarr_by_latitude.ipynb  03_netcdf_to_rasters.ipynb  03_zarr_to_geotiffs.ipynb  helpers.py
qgis_to_illustrator_tools/qgis/: Plankton_Automation.qgz  color_ramp.txt  qgis_layout_export.py
